# history

./: .env.example  .gitignore  CNAME  Makefile  llm.config.example.toml  netlify.toml  pyproject.toml  requirements.txt  tech-debt-ledger.md
.github/workflows/: deploy.yml  (+4 more)
docs/: 01_技术架构体系.md  02_业务架构体系.md  03_内容获取与生产闭环.md  03_地区化今天历史档案站_可行性评估.md  04_SEO流量与运营变现.md  05_部署与运维方案.md  06_开发实施路线图.md  07_风险管理与合规方案.md  08_AI参与完整闭环总览.md
scripts/: README.md  check_hardware.py  gen_initial_fixtures.py  gen_mock_data.py  generate_full_site.py
site/: hugo-ar.toml  hugo-cs.toml  hugo-da.toml  hugo-de.toml  hugo-el.toml  hugo-en.toml  hugo-es.toml  hugo-fi.toml  hugo-fr.toml  hugo-hu.toml  hugo-id.toml  hugo-it.toml  hugo-ja.toml  hugo-ko.toml  hugo-nl.toml  hugo-no.toml  hugo-pl.toml  hugo-pt.toml  hugo-ro.toml  hugo-ru.toml  hugo-sv.toml  hugo-tr.toml  hugo-vi.toml  hugo-zh.toml  hugo.toml
src/: __init__.py
static/: llms.txt
tests/: verify.py
开发计划/: 00_总览.md  S01-环境与工具链搭建.md  S02-Hugo项目骨架初始化.md  S03-数据模型与Mock样本生成.md  S04-OpenAPI契约编写.md  S05-Provider接口抽象.md  S06-FlaskMockServer实现.md  S07-Mock数据加载器.md  S08-Provider切换器与配置双轨制.md  S09-Stage1-fetch阶段.md  S10-Stage2-regionalize阶段.md  S11-Stage3-translate阶段.md  S12-Stage4-illustrate阶段.md  S13-Stage5-audit阶段.md  S14-Stage6-publish阶段.md  S15-asyncio管道编排器.md  S16-diskcache与重试机制.md  S17-单元测试80覆盖.md  S18-垂直切片验证.md  S19-Hugo模板与partial缓存.md  S20-图片处理流水线.md  S21-Hugo10万页全量构建.md  S22-Pagefind搜索索引.md  S23-本地预览与E2E测试.md  S24-迁移到GitHubActions.md  S25-迁移到CloudflarePages.md  S26-生产环境验证.md
进度记录/: _执行总览.md  wave0_progress.md  wave1_progress.md
(+11113 files in other folders)
